# nordic-realm

./: .gitignore  CLAUDE.md  README.md  config.yaml  draft.ipynb  fastapi_exception_handler.py  fastapi_json_response.py  pyproject.toml  requirements.txt  secrets-template.yaml  setup.py  start.py  test_deco_class.py  test_deco_class2.py
app/auth_server/: auth_token.py  auth_token_repository.py  controller.py  service.py  user_session.py  user_session_repository.py
app/controllers/: hello_world.py
app/impl/: PassAuthProvider.py  use_session.py  user_authentication_provider_impl.py
app/models/: test.py
app/repositories/: test_repository.py
app/services/: test_service.py
app/user/: controller.py  repository.py  service.py  user.py
app/usuario/: __init__.py  controller.py  repository.py  service.py  usuario.py
auth_server/: controller.py  service.py  user_session.py  user_session_repository.py
auth_server/dtos/: auth_success_response.py  jwt_token.py  open_id_profile.py  password_authentication_body.py
auth_server/fastapi/: dependencies.py
auth_server/interfaces/: password_hash_provider.py  user_authentication_provider.py  user_repository_provider.py
auth_server/middleware/: security_middleware.py
nordic_realm/: A.py  MongoBaseModel.py  launcher.py  log.py  mongo.py  mongo_repository.py
nordic_realm/application/: __init__.py  bootstrap.py  context.py  override_datetime.py
nordic_realm/decorators/: controller.py
nordic_realm/di/: __init__.py  annotations.py  component_store.py  (+5 more)
tests/: __init__.py  test_auth.py  test_draft.py  test_utils.py
(+25 files in other folders)
